Resolve wrap bug in list session

--- a/assets/style/scss/style.scss
+++ b/assets/style/scss/style.scss
@@ -590,15 +590,18 @@ body {
               font-size: 13px;
               font-weight: 300;
               a {
+                // max-width: 400px;
                 padding: 5px;
-                width: 100%;
+                overflow: hidden;
                 display: block;
+                text-overflow: ellipsis;
+                word-break: break-all;
+                text-decoration: none;
+                color: rgba(28, 29, 34, 1);
+                font-weight: 500;
+                font-size: 14px;
                 text-align: left;
                 cursor: pointer;
-                font-weight: 500;
-                text-decoration: none;
-                font-size: 14px;
-                color: rgba(28, 29, 34, 1);
               }
             }
             .tag {
